Make sure avatars have the same size as slots and are properly aligned

--- a/Ketch/User Interface/Game/GameView.xib
+++ b/Ketch/User Interface/Game/GameView.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6750" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6735"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GameViewController">
@@ -20,7 +21,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7SN-rz-Skm" userLabel="Background">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7SN-rz-Skm" userLabel="Background" propertyAccessControl="nonLocalizable">
                     <rect key="frame" x="0.0" y="58" width="320" height="510"/>
                     <color key="backgroundColor" red="0.043137254899999998" green="0.8980392157" blue="0.94509803920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </view>
@@ -61,21 +62,21 @@
                         <action selector="goToDock:" destination="-1" eventType="touchUpInside" id="iXz-ii-Ny8"/>
                     </connections>
                 </button>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="skipText" translatesAutoresizingMaskIntoConstraints="NO" id="o6p-MY-cjB">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="skipText" translatesAutoresizingMaskIntoConstraints="NO" id="o6p-MY-cjB" userLabel="Skip Slot">
                     <rect key="frame" x="19" y="258" width="100" height="100"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="100" id="OG2-9l-aGb"/>
                         <constraint firstAttribute="width" constant="100" id="ob8-d2-AyI"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="keepText" translatesAutoresizingMaskIntoConstraints="NO" id="u8F-ne-eBp">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="keepText" translatesAutoresizingMaskIntoConstraints="NO" id="u8F-ne-eBp" userLabel="Keep Slot">
                     <rect key="frame" x="202" y="258" width="100" height="100"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="100" id="0pA-db-Guf"/>
                         <constraint firstAttribute="width" constant="100" id="w5B-zd-H3O"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="marryText" translatesAutoresizingMaskIntoConstraints="NO" id="Iti-rA-q5V">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="marryText" translatesAutoresizingMaskIntoConstraints="NO" id="Iti-rA-q5V" userLabel="Marry Slot">
                     <rect key="frame" x="110" y="150" width="100" height="100"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="100" id="c1B-G5-Sdm"/>
@@ -100,14 +101,18 @@
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Lu-FI-gAz" customClass="CandidateView" customModule="Ketch" customModuleProvider="target">
-                    <rect key="frame" x="34" y="429" width="70" height="70"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1Lu-FI-gAz" customClass="CandidateView" customModule="Ketch" customModuleProvider="target">
+                    <rect key="frame" x="9" y="429" width="100" height="100"/>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="k7t-mm-QgH" customClass="CandidateView" customModule="Ketch" customModuleProvider="target">
-                    <rect key="frame" x="126" y="429" width="70" height="70"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="k7t-mm-QgH" customClass="CandidateView" customModule="Ketch" customModuleProvider="target">
+                    <rect key="frame" x="110" y="429" width="100" height="100"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="100" id="91K-1L-pq8"/>
+                        <constraint firstAttribute="width" secondItem="k7t-mm-QgH" secondAttribute="height" multiplier="1:1" id="Ito-em-jvJ"/>
+                    </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FWx-3L-EJd" customClass="CandidateView" customModule="Ketch" customModuleProvider="target">
-                    <rect key="frame" x="217" y="429" width="70" height="70"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FWx-3L-EJd" customClass="CandidateView" customModule="Ketch" customModuleProvider="target">
+                    <rect key="frame" x="212" y="429" width="100" height="100"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Ketch" translatesAutoresizingMaskIntoConstraints="NO" id="9Js-kF-hh5">
                     <rect key="frame" x="143" y="24" width="34" height="37"/>
@@ -125,26 +130,48 @@
                 <constraint firstAttribute="trailing" secondItem="PlY-Za-18q" secondAttribute="trailing" constant="8" id="6F9-1I-zbm"/>
                 <constraint firstItem="o6p-MY-cjB" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="19" id="6je-H4-tys"/>
                 <constraint firstAttribute="trailing" secondItem="u8F-ne-eBp" secondAttribute="trailing" constant="18" id="8kQ-H1-MPO"/>
+                <constraint firstItem="1Lu-FI-gAz" firstAttribute="centerX" secondItem="o6p-MY-cjB" secondAttribute="centerX" constant="-11" id="9M7-ZI-WnA"/>
+                <constraint firstItem="1Lu-FI-gAz" firstAttribute="centerX" secondItem="o6p-MY-cjB" secondAttribute="centerX" constant="-10" id="AIO-9K-4nr"/>
+                <constraint firstItem="FWx-3L-EJd" firstAttribute="centerY" secondItem="k7t-mm-QgH" secondAttribute="centerY" id="AS3-7Q-gn7"/>
                 <constraint firstItem="xs5-fm-J17" firstAttribute="top" secondItem="u8F-ne-eBp" secondAttribute="bottom" constant="7" id="Agp-o3-ODX"/>
                 <constraint firstItem="u8F-ne-eBp" firstAttribute="centerX" secondItem="xs5-fm-J17" secondAttribute="centerX" id="CbF-PC-mad"/>
+                <constraint firstItem="1Lu-FI-gAz" firstAttribute="height" secondItem="k7t-mm-QgH" secondAttribute="height" id="DhQ-vQ-DNg"/>
                 <constraint firstItem="Iti-rA-q5V" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="150" id="GVp-HG-que"/>
+                <constraint firstItem="FWx-3L-EJd" firstAttribute="height" secondItem="k7t-mm-QgH" secondAttribute="height" id="HGu-yJ-gKr"/>
                 <constraint firstItem="svh-Tk-FMJ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="I7w-Nd-fwg"/>
                 <constraint firstItem="9Js-kF-hh5" firstAttribute="centerX" secondItem="7SN-rz-Skm" secondAttribute="centerX" id="IxJ-Xt-ERq"/>
                 <constraint firstItem="7SN-rz-Skm" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="KVI-OJ-v8t"/>
+                <constraint firstItem="FWx-3L-EJd" firstAttribute="centerX" secondItem="u8F-ne-eBp" secondAttribute="centerX" constant="10" id="KaA-mm-fWu"/>
+                <constraint firstItem="1Lu-FI-gAz" firstAttribute="width" secondItem="k7t-mm-QgH" secondAttribute="width" id="OgN-pa-Gcn"/>
                 <constraint firstItem="Iti-rA-q5V" firstAttribute="centerX" secondItem="9qx-dJ-kUe" secondAttribute="centerX" id="QcF-BM-zoG"/>
                 <constraint firstItem="svh-Tk-FMJ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="R5b-iB-hQI"/>
+                <constraint firstAttribute="bottom" secondItem="k7t-mm-QgH" secondAttribute="bottom" constant="39" id="TOd-Sk-p09"/>
                 <constraint firstAttribute="bottom" secondItem="7SN-rz-Skm" secondAttribute="bottom" id="Vxx-Cr-gXR"/>
                 <constraint firstItem="KDo-UQ-ueF" firstAttribute="top" secondItem="o6p-MY-cjB" secondAttribute="bottom" constant="8" id="XVP-Wr-yQJ"/>
+                <constraint firstItem="FWx-3L-EJd" firstAttribute="leading" secondItem="k7t-mm-QgH" secondAttribute="trailing" constant="2" id="Yxu-f2-R4j"/>
                 <constraint firstItem="7SN-rz-Skm" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="58" id="ZV7-se-mho"/>
                 <constraint firstItem="dfZ-2s-ycX" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="ba1-PO-361"/>
+                <constraint firstAttribute="centerX" secondItem="k7t-mm-QgH" secondAttribute="centerX" id="btW-Gh-G17"/>
                 <constraint firstItem="o6p-MY-cjB" firstAttribute="top" secondItem="Iti-rA-q5V" secondAttribute="bottom" constant="8" id="eoo-iG-9Dr"/>
+                <constraint firstItem="FWx-3L-EJd" firstAttribute="width" secondItem="k7t-mm-QgH" secondAttribute="width" id="fLX-QT-3i8"/>
+                <constraint firstItem="FWx-3L-EJd" firstAttribute="leading" secondItem="k7t-mm-QgH" secondAttribute="trailing" constant="2" id="i7T-Ha-SU4"/>
                 <constraint firstItem="7SN-rz-Skm" firstAttribute="top" secondItem="9Js-kF-hh5" secondAttribute="bottom" constant="-3" id="k6j-wr-Mjp"/>
                 <constraint firstAttribute="trailing" secondItem="dfZ-2s-ycX" secondAttribute="trailing" id="lUD-fG-M6K"/>
+                <constraint firstItem="1Lu-FI-gAz" firstAttribute="centerY" secondItem="k7t-mm-QgH" secondAttribute="centerY" id="rap-gO-rKk"/>
                 <constraint firstItem="9qx-dJ-kUe" firstAttribute="top" secondItem="Iti-rA-q5V" secondAttribute="bottom" constant="8" id="rh3-vm-Kdl"/>
                 <constraint firstItem="u8F-ne-eBp" firstAttribute="centerY" secondItem="o6p-MY-cjB" secondAttribute="centerY" id="uuA-iF-8je"/>
+                <constraint firstItem="k7t-mm-QgH" firstAttribute="leading" secondItem="1Lu-FI-gAz" secondAttribute="trailing" constant="2" id="vcd-4U-0ER"/>
                 <constraint firstItem="KDo-UQ-ueF" firstAttribute="centerX" secondItem="o6p-MY-cjB" secondAttribute="centerX" id="zKq-2m-eDg"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="9M7-ZI-WnA"/>
+                    <exclude reference="vcd-4U-0ER"/>
+                    <exclude reference="Yxu-f2-R4j"/>
+                    <exclude reference="i7T-Ha-SU4"/>
+                </mask>
+            </variation>
         </view>
     </objects>
     <resources>
